# wbi

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  pyproject.toml  pytest.ini  search.html  searchindex.js
.github/workflows/: ci.yml  docs.yml  pyright.yml  release.yml
_sources/: index.rst.txt
docs/: conf.py
matlab/: GetRidExtraFrame.m  TrackMatrix_analysis_Kevin.m  cline_from_python.m  cline_from_python_v2.m  clusterBotCheckCompiler.m  clusterStraightenStart.m  clusterStraightenStart_v2.m  clusterStraightenStart_v3.m  clusterWormTrackCompiler.m  clusterWormTrackCompiler_Kevin.m  clusterWormTracker.m  clusterWormTrackerNonStraight.m  combinePointStatsFiles.m  combinePointStatsFiles_v2.m  compareWithRef.m  compareWithRefNonStraight.m  compile_tripleFlashAlign.m  fiducialCropper3.m  fiducialCropper3_test.m  fiducialCropper4.m  fiducialCropper5.m  mcw2wbi_straight.m  multipleAVIFlash.m  points2heat_Kevin.m  rerunDataCollectionMS.m  rerunDataCollectionMS_SK.m  rerunDataCollection_test.m  startup.m  wormCLimmobilized.m
matlab/Gui/: VisualizeTrackedData.fig  VisualizeTrackedData.m  VisualizeWorm3dAnalysis.fig  VisualizeWorm3dAnalysis.m  Worm3DFiducialPickerNetwork_2020.fig  Worm3DFiducialPickerNetwork_2020.m  Worm3DFiducialPickerNetwork_weights.fig  Worm3DFiducialPickerNetwork_weights.m  WormAnalysisPreview.m  alignment_gui.fig  alignment_gui.m  alignment_guiNew.asv  alignment_guiNew.m  scanBinaryImageStack.fig  scanBinaryImageStack.m  wormCL_Viewer.m  wormCL_Viewer_SK.fig  wormCL_Viewer_SK.m
matlab/ImageAlignment/: ExtractAlignmentImagesFromVideoNew.m
matlab/MiscTools/: colNanFill.m  heatmap2centerline.m  oneHotNeuron.m
matlab/TimeAlignment/: AviFlashAlign_v2.m  datTimeTrace_test.m  doubleFlashAlign.m  flashTimeAlign2.m  highResTimeTraceAnalysisTriangle4.py  highResTimeTraceAnalysisTriangle4_fr_backup.py  (+3 more)
scripts/: QtImageStackViewer.py  QtImageViewer.py  image_align.py  pipeline.py  temp.py
tests/: conftest.py  test_alignment.py  test_config.py  test_dat.py  test_experiment.py  test_legacy_centerline.py  test_legacy_flash_finder.py  test_timing.py  test_wbi.py  test_wbi_command_goodbye.py  test_wbi_command_hello.py
(+66 files in other folders)
